--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <script src="game.js"></script>
+  <script src="./assets/js/core/Game.js"></script>
+  <script src="./assets/js/core/EventBus.js"></script>
+  <script src="./assets/js/entities/Entity.js"></script>
+  <script src="./assets/js/entities/Player.js"></script>
+  <script src="./assets/js/managers/EntityManager.js"></script>
+  <script src="./assets/js/utils/Constants.js"></script>
 </body>
 </html>
