--- a/index.html
+++ b/index.html
@@ -28,15 +28,9 @@
       <button id="startButton">START GAME</button>
     </div>
   </div>
+  <!-- THREE.JS Library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <!-- Main entry point - only load this one file with type="module" -->
   <script src="./assets/js/main.js"></script>
-  <script src="./assets/js/core/Game.js"></script>
-  <script src="./assets/js/core/EventBus.js"></script>
-  <script src="./assets/js/entities/Entity.js"></script>
-  <script src="./assets/js/entities/Player.js"></script>
-  <script src="./assets/js/managers/EntityManager.js"></script>
-  <script src="./assets/js/utils/Constants.js"></script>
-  <script src="./assets/js/utils/Constants.js"></script>
-  <script src="./assets/js/utils/MathUtils.js"></script>
 </body>
 </html>
