Updated the index and Constants.js files

--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
   <!-- THREE.JS Library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <!-- Main entry point - only load this one file with type="module" -->
-  <script src="./assets/js/main.js"></script>
+  <script type="module" src="./assets/js/main.js"></script>
 </body>
 </html>
