Implement the styles and logic of audion in the Game.js and index.html

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         <p>You have 5 lives. Good luck, defender!</p>
       </div>
       <button id="startButton">START GAME</button>
+
+      <div id="audioControls">
+        <button id="muteButton" class="controlButton">🔊</button>
+      </div>
     </div>
   </div>
   <!-- THREE.JS Library -->
